changes in structure

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+.venv
 requrements.txt
 .env
 dist
 dist-ssr
 *.local
-
+marketfcm2-firebase-adminsdk-q4z7u-e91f2f94ef.json
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
